# hello-gm

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
api/: asgi.py  controller.py  db.py  schema.graphql  schema.py  settings.py
api/tests/: test_api.py
conf/: db.py
patient/: domain.py  errors.py  models.py  service.py
patient/migrations/: env.py
patient/migrations/versions/: 3fbd35c0adfe_create_patient_table.py
patient/tests/: test_service.py
