[tool.poetry]
name = "hello_gm"
version = "0.1.0"
description = ""
authors = ["Chris Ramacciotti <chris@rama.io>"]

[tool.poetry.dependencies]
python = "3.9.7"
SQLAlchemy = "1.4.27"
uvicorn = "0.15.0"
ariadne = "^0.13.0"
pytest = "^6.2.5"
psycopg2-binary = "^2.9.2"

[tool.poetry.dev-dependencies]
hypothesis = "^6.24.4"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core==1.1.11"]
build-backend = "poetry.core.masonry.api"
